--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Jinja2==2.11.1
 MarkupSafe==1.1.1
 Werkzeug==1.0.0
 numpy>=1.9.2
-scipy=>0.15.5
+scipy>=0.15.5
 pandas==1.0.1
 scikit-learn==0.22.2 
 matplotlib>=1.4.3 
