--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 Werkzeug==1.0.0
-numpy>=1.9.2
+numpy==1.18.1 
 scipy>=0.15.5
 pandas>=0.19
 scikit-learn==0.22.1
