--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ MarkupSafe==1.1.1
 Werkzeug==1.0.0
 numpy==1.18.1 
 scipy>=0.15.5
-pandas>=0.19
+pandas==1.0.1 
 scikit-learn==0.22.2
 matplotlib>=1.4.3 
