--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 Werkzeug==1.0.0
-numpy==1.18.1 
-scipy>=0.15.5
-pandas==1.0.1 
-scikit-learn==0.22.2
+numpy>=1.9.2
+scipy>=0.15.1
+pandas>=0.19
+scikit-learn>=0.18
 matplotlib>=1.4.3 
